Bug 116265 - FILEOPEN: Identation is lost in some cases
Summary: FILEOPEN: Identation is lost in some cases
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Styles-Paragraph
  Show dependency treegraph
 
Reported: 2018-03-07 13:14 UTC by Xisco Faulí
Modified: 2018-04-06 09:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.1 (189.24 KB, image/png)
2018-03-07 13:14 UTC, Xisco Faulí
Details
sample (2.60 KB, application/msword)
2018-03-07 14:13 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-03-07 13:14:39 UTC
Created attachment 140429 [details]
comparison MSO 2010 and LibreOffice 6.1

Steps to reproduce:
1. Open attachment 99795 [details] from bug 78506

-> Observed behaviour: all lines in both paragraphs have 0 indent. See attached image

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 16605d0cdc2c15ab4ae175531ba52824bf52bc70
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-03-07 13:16:40 UTC
Regression introduced by:

author	Miklos Vajna <vmiklos@collabora.co.uk>	2018-02-05 16:02:19 +0100
committer	Miklos Vajna <vmiklos@collabora.co.uk>	2018-02-06 10:53:37 +0100
commit 03cee02464f230a2efa67d131c137f32fe540052 (patch)
tree 935f992c17b3e2895afca2861c4b6d850e991687
parent 03458f8e4609d00d7e9334a23d5f7f6fe8846e01 (diff)
tdf#115242 RTF import: order numPr before other paragraph properties
So that paragraph properties inherited from numbering properties can be
properly overwritten with direct formatting, even when we have to take
style deduplication into account.

The OOXML tokenizer already did this,
writerfilter::dmapper::DomainMapper::sprmWithProps()'s
NS_ooxml::LN_CT_NumPr_numId depends on this, so adapt the RTF tokenizer
accordingly.

Bisected with: bibisect-linux64-6.1 

Adding Cc: to Miklos Vajna
Comment 2 Xisco Faulí 2018-03-07 14:13:08 UTC
Created attachment 140430 [details]
sample

This file is also affected by the same commit
Comment 3 Commit Notification 2018-04-04 07:03:21 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=791fb3979df47a9fe21a1fbb9debbc955f3e035b

tdf#116265 RTF import: ignore \fi in para if it repeats invalid \fi from list

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-04-05 13:44:52 UTC
The issue is fixed for attachment 99795 [details] in

Verified in

Version: 6.1.0.0.alpha0+
Build ID: abf9ec7bef2c341ad9c914fd909dd03b4a784f18
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

but not for attachment 140430 [details].

I'll create a follow-up bug...